FIX- fix bug scss on firefox

--- a/cu-manager/src/main/webapp/app/styles/_icons.scss
+++ b/cu-manager/src/main/webapp/app/styles/_icons.scss
@@ -59,21 +59,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-@font-face {
-  font-family: "icon-tech";
-  src: url("./icon-tech.eot");
-  src: url("./icon-tech.eot?#iefix") format("embedded-opentype"),
-  url("./icon-tech.woff") format("woff"),
-  url("./icon-tech.ttf") format("truetype"),
-  url("./icon-tech.svg#icon-tech") format("svg");
-  font-weight: normal;
-  font-style: normal;
-}
+
 
 @media screen and (-webkit-min-device-pixel-ratio: 0) {
   @font-face {
     font-family: "icon-tech";
-    src: url("./icon-tech.svg#icon-tech") format("svg");
+    src: url("icon-tech.svg#icon-tech") format("svg");
   }
 }
 
